src/objects/ints__GDC_Service_Parameters__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>ints__Data_Source_Records__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Uncheck this if you do not wish to have Data Source Records</inlineHelpText>
        <label>Data Source Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ints__Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Store_All__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, GDC Verify Records will contain all records, else they will only contain records for fields that do not match.</description>
        <inlineHelpText>If checked, GDC Verify Records will contain all records, else they will only contain records for fields that do not match.</inlineHelpText>
        <label>Store All</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ints__Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__lookupAPI__c</fullName>
        <label>lookupAPI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GDC Service Parameters</label>
</CustomObject>